docs(env): use explicit placeholders in example env files

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-﻿# ===== infra (used by docker-compose) =====
+# ===== infra (used by docker-compose) =====
 POSTGRES_USER=streamhive
-POSTGRES_PASSWORD=streamhive
+POSTGRES_PASSWORD=example-password
 POSTGRES_DB=streamhive
 POSTGRES_PORT=5432
 
 REDIS_PORT=6379
 
 # ===== app-level flags/secrets =====
-INTERNAL_SHARED_SECRET=streamhive-dev-secret
+INTERNAL_SHARED_SECRET=change-me
 NODE_ENV=development
 
 # ===== optional IMAP (for auto-pulling PDFs) =====
