--- a/services/core-ledger/package.json
+++ b/services/core-ledger/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/rate-limit": "10.3.0",
     "archiver": "^7.0.1",
     "cross-spawn": "^7.0.6",
     "csv-stringify": "^6.6.0",
