--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,32 +7,21 @@ on:
 
 jobs:
   build:
-    name: Lint • Build • Test
+    name: CI / build
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
+          node-version: 20
 
-      - name: Install deps
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
+      - name: Install dependencies
+        run: npm install
 
       - name: Lint
-        run: npm run lint
+        run: npm run lint --if-present
 
-      - name: Build
-        run: npm run build
-
-      - name: Test
-        run: npm test
+      - name: Run tests
+        run: npm test --if-present
