--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 ﻿name: CI
-
 on:
   pull_request:
   push:
     branches: [ main ]
-
 jobs:
   build:
     name: CI / build
@@ -12,8 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: npm ci || npm i
-      - run: npm run lint --if-present
-      - run: npm test --if-present
+        with: { node-version: 20 }
+      - name: Install
+        run: npm ci
+      - name: Lint
+        run: npm run lint --if-present
+      - name: Test
+        run: npm test --if-present
