--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
                             "@types/cross-spawn":  "^6.0.6",
                             "@types/node":  "^24.3.1",
                             "@types/yargs":  "^17.0.33",
+                            "@typescript-eslint/eslint-plugin":  "^7.2.0",
+                            "@typescript-eslint/parser":  "^7.2.0",
                             "@vitest/coverage-v8":  "^3.2.4",
                             "c8":  "^10.1.3",
                             "concurrently":  "^9.0.1",
